# Spec6

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  cognee.sh  me.md  package.json  product.md  tsconfig.json  voice-assistant-plan.md
.claude/skills/tailwind-theme-builder/: SKILL.md
.claude/skills/tailwindcss-animations/: SKILL.md
.claude/skills/tailwindcss-animations/references/: animation-patterns.md
.claude/skills/web-typography/: SKILL.md
.claude/skills/web-typography/references/: css-implementation.md  evaluating-typefaces.md  pairing-strategies.md  responsive-typography.md  typeface-anatomy.md
.github/workflows/: release.yml
helpers/consulting-agent/: Consulting Agent.md
helpers/counterfit-agent/: Counterfit agent.md
helpers/sales-agent/: Sales agent.md
scripts/: brightdata-browser-fetch.mjs  dev.sh
src/: agent.rs  auth.rs  chat.rs  cognee.rs  config.rs  db.rs  inference.rs  main.rs  overview.rs  prompt.rs  render.rs  speechmatics.rs  triggerware.rs  watchtower.rs
src/frontend/: entry-client.tsx  styles.css  vite.config.ts
src/frontend/react/: app.tsx  pages.tsx  types.ts
src/frontend/react/chat/: agent-roster.ts  autonomy-banner.tsx  canvas-drawer.tsx  chat-app.tsx  composer.tsx  header.tsx  onboarding-format.ts  onboarding.tsx  search-palette.tsx  sidebar.tsx  stream.ts  thread.tsx  trend-chart.tsx  types.ts  utils.ts  voice-assistant.tsx  world-heatmap.tsx
src/frontend/react/components/: button.tsx  card.tsx  diagonal.tsx  footer.tsx  icons.tsx  input.tsx  (+1 more)
src/routes/: api.rs  app.rs  mod.rs  public.rs
(+7 files in other folders)
